# dis-delta-team

./: .gitattributes  README.md  delta_commands  dependency_install  object_identifier.py  task2.sh
anomaly_detection/: dev_ano_det_model.ipynb  dev_prepare_dataset.ipynb
anomaly_detection/anomaly_detection_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
cylinder_ring_publisher_demo/: package.xml  setup.cfg  setup.py
cylinder_ring_publisher_demo/cylinder_ring_publisher_demo/: cylinder_ring_publisher_demo.py
delta_explorer/: package.xml  setup.cfg  setup.py
delta_explorer/delta_explorer/: delta_explorer.py
delta_greeter/: package.xml  setup.cfg  setup.py
delta_greeter/delta_greeter/: delta_greeter.py
delta_interfaces/: CMakeLists.txt  package.xml
delta_interfaces/msg/: CylinderObjects.msg  ExplorerJob.msg  GreeterJob.msg  JobStatus.msg  LevelObjects.msg  MonalisaJob.msg  ParkingJob.msg  RingObjects.msg
delta_parking/: package.xml  setup.cfg  setup.py
delta_parking/delta_parking/: delta_parking.py
delta_speaker/: package.xml  setup.cfg  setup.py
delta_speaker/delta_speaker/: delta_speaker.py
detect_people_no_point_cloud/: detect_people.py
dis_tutorial3/: CMakeLists.txt
dis_tutorial3/scripts/: detect_people.py  (+2 more)
dis_tutorial6/: CMakeLists.txt
mission_control/: CMakeLists.txt  package.xml
mission_control/src/: mission_control.cpp
ml_identifier/: package.xml  setup.cfg  setup.py
object_identifier/: package.xml  setup.cfg  setup.py
report_source/: main.tex
selfmade_map/: task1_realrobot.pgm  task1_realrobot.yaml
(+13 files in other folders)
